pl 19.uu3
	- debian fixes.

pl 19.uu2 
	- junked \output 

pl 19.uu1
	- MF fixes.
	
pl 18.uu1
	- gcc 2.7 fixes

pl 18
	- dictionary.hh fix

pl 17.jbr1
	- stepmake/stepmake/bin/package-zip32.sh: Updated configure statement
	  and modified win32 specific distribution file names to match
	  pl 16.hwn1 changes.
	- scripts/ly2dvi.py: Modified search paths to match the new lilypond
	  installation tree.
	- scripts/convert-mudela.py: Remove the an existing backup file
	  before renaming original.  This is a WIN32 Python requirement.
	- Documentation/ntweb/index.html: Updated documentation to match
	  new lilypond installation tree.
	- lily/main.cc: Fixed LILYPONDPREFIX search paths.

**********

pl 17
	- fixed RPM building.

pl 16.hwn1
 	- ridiculous slur dims fixed.
 	- ly2dvi32.py -> ly2dvi.py, ly2dvi.sh -> ly2dvi-old
 	- use re iso. regex for python stuff.
 	- bf: mudela-book.py
 	- updated install directions.  Made lilypond-login for csh
 	- bf: installdirs of MF stuff
 	- Dictionary implementation using hash tables (LilyPond is 3% faster)
 	- Cache [non]group_l_arr () calls in translator-group.cc (LilyPond is 4% faster)

pl 16.uu1
	- debian URLs, make/stepmake.make  patch
	- further debian fixes.
	
pl 14.tca1
	- partitas
	- prall{mordent,prall} patch.

******
pl 16
	- read property ydirection and tieYDirection for tie direction.
	- bf: slur over rest.
	- bf: include path
	- part of jcn2
	- configure --enable-guile

pl 15.jcn1
 	- autoconf on mf,mfont mp,mpost
 
pl 15.am
	- Lots of patches from *Adrian* *Mariano*!

**********

pl 15
pl 14.hwn1
	- \lyrics iso \lyric (mudela 1.0.7)
	- cleaned up real_expression syntax.
	- removed optional_semicolon nonterminal after toplevel assignment
	- MInterval Music::time_int () -> Moment Music::duration ()
	- junked Music_iterator::daddy_iter_l_
	- junked Sequential_music::offset_mom_
	- tempo compression:
		* syntax: \times 2/3 Music
		* Compressed_music, Compressed_music_iterator
	- flower: init rational to 0