@@ -9,7 +9,7 @@ at-dir = $(outdir)/
 at-ext =
 
 EXTRA_DIST_FILES = README.Debian TODO $(CONF_FILES) $(OUT_DIST_FILES) control.foka
-CONF_FILES=changelog copyright postinst postrm rules watch 
+CONF_FILES=changelog copyright preinst postinst postrm rules watch 
 OUTCONF_FILES=$(addprefix $(outdir)/, $(basename $(CONF_FILES))) $(OUTIN_FILES)
 OUT_DIST_FILES = $(OUTIN_FILES)
 
