@@ -2,7 +2,7 @@ This package was debianized by Anthony Fok <foka@debian.org> on
 Wed,  6 Aug 1997 04:30:28 -0600
 
 It was downloaded from
-      ftp://ftp.cs.uu.nl/pub/GNU/LilyPond/v1.0/lilypond-1.0.19.uu1.tar.gz
+      ftp://ftp.cs.uu.nl/pub/GNU/LilyPond/v1.0/lilypond-1.0.19.uu3.tar.gz
 
 It is also available from:
 
