@@ -1,15 +1,15 @@
 Begin3
 Titel: LilyPond
-Versie: 1.0.19.uu3
-Inschrijf datum: 11DEC98
+Versie: 1.0.19.uu5
+Inschrijf datum: 05JAN99
 Beschrijving: @FLAPTEKST@
 Trefwoorden: muziek typezetten midi notatie
 Auteur: hanwen@stack.nl (Han-Wen Nienhuys)
 	janneke@gnu.org (Jan Nieuwenhuizen)
 Onderhouden door: hanwen@cs.ruu.nl (Han-Wen Nienhuys)
 Voornaamste plek: sunsite.unc.edu /pub/Linux/apps
-	770k lilypond-1.0.19.uu3.tar.gz 
+	770k lilypond-1.0.19.uu5.tar.gz 
 Oorspronkelijke plek: ftp.cs.uu.nl /pub/GNU/LilyPond/development/
-	770k lilypond-1.0.19.uu3.tar.gz 
+	770k lilypond-1.0.19.uu5.tar.gz 
 Copi-eer voorwaarden: GPL
 End
