@@ -1,3 +1,8 @@
+pl 19.uu5 
+	- mi2mu fix
+
+pl 19.uu4
+	- more debian fixes
 pl 19.uu3
 	- debian fixes.
 
